--- a/Xyperico.Discuss.Contract/Xyperico.Discuss.Contract.csproj
+++ b/Xyperico.Discuss.Contract/Xyperico.Discuss.Contract.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{8660DA78-079F-499D-AB5A-D7632A373B17}</ProjectGuid>
+    <ProjectGuid>{2C5AA7A1-503E-4690-A99D-BF69801D9641}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Xyperico.Discuss</RootNamespace>
-    <AssemblyName>Xyperico.Discuss</AssemblyName>
+    <RootNamespace>Xyperico.Discuss.Contract</RootNamespace>
+    <AssemblyName>Xyperico.Discuss.Contract</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -23,7 +23,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -46,9 +45,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Forums\Forum.cs" />
-    <Compile Include="Forums\ForumApplicationService.cs" />
-    <Compile Include="Posts\Post.cs" />
+    <Compile Include="Forums\Commands\CreateForumCommand.cs" />
+    <Compile Include="Forums\Commands\UpdateForumCommand.cs" />
+    <Compile Include="Forums\Events\ForumCreatedEvent.cs" />
+    <Compile Include="Forums\Events\ForumUpdatedEvent.cs" />
+    <Compile Include="Forums\ForumId.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -56,24 +57,12 @@
       <Project>{B18C85D4-0E07-477A-BE44-1F22281D47C7}</Project>
       <Name>Xyperico.Agres.Contract</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Xyperico\Xyperico.Agres\Xyperico.Agres\Xyperico.Agres.csproj">
-      <Project>{F7D3C1F6-7F4E-4DF5-9226-5AEC4180C74F}</Project>
-      <Name>Xyperico.Agres</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Xyperico\Xyperico.Base\Xyperico.Base\Xyperico.Base.csproj">
-      <Project>{054A30BA-B232-4FF1-9F23-1040D075764A}</Project>
-      <Name>Xyperico.Base</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Xyperico.Discuss.Contract\Xyperico.Discuss.Contract.csproj">
-      <Project>{2C5AA7A1-503E-4690-A99D-BF69801D9641}</Project>
-      <Name>Xyperico.Discuss.Contract</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
