Working with different kinds of serializers.

--- a/Xyperico.Discuss.Contract/Xyperico.Discuss.Contract.csproj
+++ b/Xyperico.Discuss.Contract/Xyperico.Discuss.Contract.csproj
@@ -36,8 +36,12 @@
     <Reference Include="CuttingEdge.Conditions">
       <HintPath>..\packages\CuttingEdge.Conditions.1.2.0.0\lib\NET35\CuttingEdge.Conditions.dll</HintPath>
     </Reference>
+    <Reference Include="protobuf-net">
+      <HintPath>..\packages\protobuf-net.2.0.0.640\lib\net40\protobuf-net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -57,9 +61,6 @@
       <Project>{B18C85D4-0E07-477A-BE44-1F22281D47C7}</Project>
       <Name>Xyperico.Agres.Contract</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
