--- a/Xyperico.Discuss.Tests/Xyperico.Discuss.Tests.csproj
+++ b/Xyperico.Discuss.Tests/Xyperico.Discuss.Tests.csproj
@@ -55,6 +55,14 @@
       <Project>{B18C85D4-0E07-477A-BE44-1F22281D47C7}</Project>
       <Name>Xyperico.Agres.Contract</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Xyperico\Xyperico.Agres\Xyperico.Agres.ProtoBuf\Xyperico.Agres.ProtoBuf.csproj">
+      <Project>{D150EABC-E736-4BD1-9FC1-CB6F607E000E}</Project>
+      <Name>Xyperico.Agres.ProtoBuf</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Xyperico\Xyperico.Agres\Xyperico.Agres.Sql\Xyperico.Agres.Sql.csproj">
+      <Project>{9BA99FF6-E704-47D2-9FF2-D1F311EBEE90}</Project>
+      <Name>Xyperico.Agres.Sql</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Xyperico\Xyperico.Agres\Xyperico.Agres\Xyperico.Agres.csproj">
       <Project>{F7D3C1F6-7F4E-4DF5-9226-5AEC4180C74F}</Project>
       <Name>Xyperico.Agres</Name>
