--- a/Xyperico.Discuss.Tests/Xyperico.Discuss.Tests.csproj
+++ b/Xyperico.Discuss.Tests/Xyperico.Discuss.Tests.csproj
@@ -36,6 +36,9 @@
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="protobuf-net, Version=2.0.0.640, Culture=neutral, PublicKeyToken=257b51d87d2e4d67, processorArchitecture=MSIL">
+      <HintPath>..\packages\protobuf-net.2.0.0.640\lib\net40\protobuf-net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -59,9 +62,9 @@
       <Project>{D150EABC-E736-4BD1-9FC1-CB6F607E000E}</Project>
       <Name>Xyperico.Agres.ProtoBuf</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Xyperico\Xyperico.Agres\Xyperico.Agres.Sql\Xyperico.Agres.Sql.csproj">
-      <Project>{9BA99FF6-E704-47D2-9FF2-D1F311EBEE90}</Project>
-      <Name>Xyperico.Agres.Sql</Name>
+    <ProjectReference Include="..\..\Xyperico\Xyperico.Agres\Xyperico.Agres.SQLite\Xyperico.Agres.SQLite.csproj">
+      <Project>{563C8C4C-A0F7-4AEE-8D5A-93D7CCA39D83}</Project>
+      <Name>Xyperico.Agres.SQLite</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Xyperico\Xyperico.Agres\Xyperico.Agres\Xyperico.Agres.csproj">
       <Project>{F7D3C1F6-7F4E-4DF5-9226-5AEC4180C74F}</Project>
