--- a/Xyperico.Discuss/Xyperico.Discuss.csproj
+++ b/Xyperico.Discuss/Xyperico.Discuss.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApplicationStarter.cs" />
     <Compile Include="Forums\Forum.cs" />
     <Compile Include="Forums\ForumApplicationService.cs" />
     <Compile Include="Posts\Post.cs" />
@@ -55,6 +56,10 @@
     <ProjectReference Include="..\..\Xyperico\Xyperico.Agres\Xyperico.Agres.Contract\Xyperico.Agres.Contract.csproj">
       <Project>{B18C85D4-0E07-477A-BE44-1F22281D47C7}</Project>
       <Name>Xyperico.Agres.Contract</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Xyperico\Xyperico.Agres\Xyperico.Agres.ProtoBuf\Xyperico.Agres.ProtoBuf.csproj">
+      <Project>{D150EABC-E736-4BD1-9FC1-CB6F607E000E}</Project>
+      <Name>Xyperico.Agres.ProtoBuf</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Xyperico\Xyperico.Agres\Xyperico.Agres\Xyperico.Agres.csproj">
       <Project>{F7D3C1F6-7F4E-4DF5-9226-5AEC4180C74F}</Project>
