--- a/Xyperico.Discuss/Xyperico.Discuss.csproj
+++ b/Xyperico.Discuss/Xyperico.Discuss.csproj
@@ -37,6 +37,9 @@
     <Reference Include="CuttingEdge.Conditions">
       <HintPath>..\packages\CuttingEdge.Conditions.1.2.0.0\lib\NET35\CuttingEdge.Conditions.dll</HintPath>
     </Reference>
+    <Reference Include="protobuf-net, Version=2.0.0.640, Culture=neutral, PublicKeyToken=257b51d87d2e4d67, processorArchitecture=MSIL">
+      <HintPath>..\packages\protobuf-net.2.0.0.640\lib\net40\protobuf-net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -47,16 +50,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationStarter.cs" />
+    <Compile Include="Forums\Commands\CreateForumCommand.cs" />
+    <Compile Include="Forums\Commands\UpdateForumCommand.cs" />
+    <Compile Include="Forums\Events\ForumCreatedEvent.cs" />
+    <Compile Include="Forums\Events\ForumUpdatedEvent.cs" />
     <Compile Include="Forums\Forum.cs" />
     <Compile Include="Forums\ForumApplicationService.cs" />
+    <Compile Include="Forums\ForumId.cs" />
     <Compile Include="Posts\Post.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Xyperico\Xyperico.Agres\Xyperico.Agres.Contract\Xyperico.Agres.Contract.csproj">
-      <Project>{B18C85D4-0E07-477A-BE44-1F22281D47C7}</Project>
-      <Name>Xyperico.Agres.Contract</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\Xyperico\Xyperico.Agres\Xyperico.Agres.ProtoBuf\Xyperico.Agres.ProtoBuf.csproj">
       <Project>{D150EABC-E736-4BD1-9FC1-CB6F607E000E}</Project>
       <Name>Xyperico.Agres.ProtoBuf</Name>
